--- a/Hovos/Base.lproj/Main.storyboard
+++ b/Hovos/Base.lproj/Main.storyboard
@@ -628,7 +628,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U06-ez-W1y">
                                 <rect key="frame" x="20" y="278.5" width="335" height="43.5"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jAg-Ee-2dS">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user" translatesAutoresizingMaskIntoConstraints="NO" id="jAg-Ee-2dS">
                                         <rect key="frame" x="10" y="9" width="25" height="25"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="25" id="VEt-Rb-HCQ"/>
@@ -653,7 +653,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Khi-Ie-RCE">
                                 <rect key="frame" x="20" y="332" width="335" height="43"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="l4S-rs-Mbh">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user" translatesAutoresizingMaskIntoConstraints="NO" id="l4S-rs-Mbh">
                                         <rect key="frame" x="10" y="9" width="25" height="25"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="25" id="WHt-bU-cGU"/>
@@ -680,7 +680,6 @@
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="emailId" translatesAutoresizingMaskIntoConstraints="NO" id="jcn-e0-m83">
                                         <rect key="frame" x="10" y="9.5" width="25" height="25"/>
-                                        <color key="backgroundColor" name="orangeColor"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="25" id="Wth-Ti-0Ca"/>
                                             <constraint firstAttribute="height" constant="25" id="led-dd-8ro"/>
@@ -704,14 +703,14 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iid-9p-VRy">
                                 <rect key="frame" x="20" y="438.5" width="335" height="43.5"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nxA-mh-HAO">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="password" translatesAutoresizingMaskIntoConstraints="NO" id="nxA-mh-HAO">
                                         <rect key="frame" x="10" y="9" width="25" height="25"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="25" id="MiD-pU-XVC"/>
                                             <constraint firstAttribute="width" constant="25" id="OZk-bF-k1G"/>
                                         </constraints>
                                     </imageView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1qS-ME-4GL">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eyeprotected" translatesAutoresizingMaskIntoConstraints="NO" id="1qS-ME-4GL">
                                         <rect key="frame" x="300" y="9" width="25" height="25"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="25" id="d91-fA-luK"/>
@@ -823,7 +822,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YEU-kp-2Yc">
                                 <rect key="frame" x="20" y="365" width="335" height="43.5"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qti-yn-HxS">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="emailId" translatesAutoresizingMaskIntoConstraints="NO" id="qti-yn-HxS">
                                         <rect key="frame" x="10" y="9.5" width="25" height="25"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="25" id="Ilo-9j-1PG"/>
@@ -848,14 +847,14 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="soy-JI-hta">
                                 <rect key="frame" x="20" y="418.5" width="335" height="43.5"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qX5-ng-COb">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="password" translatesAutoresizingMaskIntoConstraints="NO" id="qX5-ng-COb">
                                         <rect key="frame" x="10" y="9" width="25" height="25"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="25" id="Dxv-g3-T5O"/>
                                             <constraint firstAttribute="width" constant="25" id="xGG-Q9-iKr"/>
                                         </constraints>
                                     </imageView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qLr-MJ-7H7">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eyeprotected" translatesAutoresizingMaskIntoConstraints="NO" id="qLr-MJ-7H7">
                                         <rect key="frame" x="300" y="9" width="25" height="25"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="25" id="Iap-To-hCs"/>
@@ -960,9 +959,12 @@
     <resources>
         <image name="dummy" width="600" height="400"/>
         <image name="emailId" width="32" height="32"/>
+        <image name="eyeprotected" width="32" height="32"/>
         <image name="h_small7" width="41" height="48"/>
         <image name="hovos_logo" width="191" height="82"/>
         <image name="menu" width="512" height="512"/>
+        <image name="password" width="32" height="32"/>
+        <image name="user" width="32" height="32"/>
         <image name="v_small7" width="41" height="48"/>
         <image name="volunteer" width="140" height="126"/>
         <namedColor name="greenColor">
