--- a/Hovos/Base.lproj/Main.storyboard
+++ b/Hovos/Base.lproj/Main.storyboard
@@ -28,16 +28,14 @@
                                             <constraint firstAttribute="width" constant="100" id="lho-SU-UD7"/>
                                         </constraints>
                                     </imageView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0he-Qk-Qaj">
+                                    <button opaque="NO" alpha="0.5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0he-Qk-Qaj">
                                         <rect key="frame" x="335" y="20" width="30" height="30"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="pmb-W0-EJC"/>
                                             <constraint firstAttribute="width" constant="30" id="qoq-4S-kT5"/>
                                         </constraints>
                                         <state key="normal" image="menu"/>
-                                        <connections>
-                                            <segue destination="KO2-53-gc9" kind="presentation" modalPresentationStyle="overCurrentContext" id="Xc5-Gv-cm5"/>
-                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TNm-Mr-gze">
                                         <rect key="frame" x="120" y="17" width="205" height="36"/>
@@ -273,9 +271,8 @@
                                                 </cells>
                                             </collectionView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="orangeAngle" translatesAutoresizingMaskIntoConstraints="NO" id="ecO-S3-lTE">
-                                                <rect key="frame" x="305" y="10" width="50" height="30"/>
+                                                <rect key="frame" x="291" y="10" width="64" height="30"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="50" id="99j-Il-2IA"/>
                                                     <constraint firstAttribute="height" constant="30" id="UTk-UB-M3Q"/>
                                                 </constraints>
                                             </imageView>
@@ -371,10 +368,9 @@
                                                 </cells>
                                             </collectionView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blueAngle" translatesAutoresizingMaskIntoConstraints="NO" id="wdg-KU-nxD">
-                                                <rect key="frame" x="305" y="10" width="50" height="30"/>
+                                                <rect key="frame" x="291" y="10" width="64" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="Rxm-MC-Bh3"/>
-                                                    <constraint firstAttribute="width" constant="50" id="bud-QV-h9o"/>
                                                 </constraints>
                                             </imageView>
                                         </subviews>
@@ -660,25 +656,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rt5-ad-Qcq">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <action selector="dismiss:" destination="KO2-53-gc9" eventType="touchUpInside" id="iEk-6w-JYL"/>
+                                </connections>
+                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vrl-tm-vl4">
-                                <rect key="frame" x="150" y="10" width="225" height="100"/>
+                                <rect key="frame" x="150" y="10" width="215" height="100"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="273-DG-X0N">
-                                        <rect key="frame" x="0.0" y="0.0" width="225" height="100"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="215" height="100"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="menuitem" id="1ab-sO-ISf" customClass="menuCell" customModule="Hovos" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="28" width="225" height="44"/>
+                                                <rect key="frame" x="0.0" y="28" width="215" height="39.5"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1ab-sO-ISf" id="y4p-vi-aXQ">
-                                                    <rect key="frame" x="0.0" y="0.0" width="225" height="44"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="215" height="39.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dTD-Oo-OPW">
-                                                            <rect key="frame" x="25" y="10" width="200" height="24"/>
+                                                            <rect key="frame" x="25" y="10" width="190" height="19.5"/>
                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                            <color key="textColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
@@ -698,7 +701,7 @@
                                         </prototypes>
                                     </tableView>
                                 </subviews>
-                                <color key="backgroundColor" red="0.92148774862289429" green="0.92162030935287476" blue="0.92145884037017822" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.96470588235294119" green="0.95634847716109395" blue="0.94117647058823528" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="273-DG-X0N" secondAttribute="bottom" id="B11-UQ-gFf"/>
                                     <constraint firstItem="273-DG-X0N" firstAttribute="leading" secondItem="Vrl-tm-vl4" secondAttribute="leading" id="Hd0-56-HNY"/>
@@ -706,26 +709,26 @@
                                     <constraint firstItem="273-DG-X0N" firstAttribute="top" secondItem="Vrl-tm-vl4" secondAttribute="top" id="gZV-Q2-lft"/>
                                     <constraint firstAttribute="height" constant="100" id="wEX-Bo-hY4"/>
                                 </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="corners">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rt5-ad-Qcq">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <connections>
-                                    <action selector="dismiss:" destination="KO2-53-gc9" eventType="touchUpInside" id="iEk-6w-JYL"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Vrl-tm-vl4" firstAttribute="trailing" secondItem="0W3-4C-RpQ" secondAttribute="trailing" id="07w-Uf-M7g"/>
-                            <constraint firstItem="rt5-ad-Qcq" firstAttribute="leading" secondItem="0W3-4C-RpQ" secondAttribute="leading" id="4Lc-nv-iFc"/>
-                            <constraint firstItem="0W3-4C-RpQ" firstAttribute="trailing" secondItem="rt5-ad-Qcq" secondAttribute="trailing" id="JLn-UH-ZIX"/>
+                            <constraint firstItem="Vrl-tm-vl4" firstAttribute="trailing" secondItem="0W3-4C-RpQ" secondAttribute="trailing" constant="-10" id="07w-Uf-M7g"/>
+                            <constraint firstItem="rt5-ad-Qcq" firstAttribute="leading" secondItem="0W3-4C-RpQ" secondAttribute="leading" id="GoP-3I-lD0"/>
                             <constraint firstItem="Vrl-tm-vl4" firstAttribute="leading" secondItem="0W3-4C-RpQ" secondAttribute="leading" constant="150" id="Pcq-67-rRz"/>
-                            <constraint firstItem="rt5-ad-Qcq" firstAttribute="top" secondItem="0W3-4C-RpQ" secondAttribute="top" id="aVg-r4-LSU"/>
+                            <constraint firstItem="rt5-ad-Qcq" firstAttribute="top" secondItem="0W3-4C-RpQ" secondAttribute="top" id="afN-7C-yfU"/>
                             <constraint firstItem="Vrl-tm-vl4" firstAttribute="top" secondItem="0W3-4C-RpQ" secondAttribute="top" constant="10" id="gzG-b4-T2f"/>
-                            <constraint firstItem="0W3-4C-RpQ" firstAttribute="bottom" secondItem="rt5-ad-Qcq" secondAttribute="bottom" id="vH6-j9-INB"/>
+                            <constraint firstItem="rt5-ad-Qcq" firstAttribute="bottom" secondItem="0W3-4C-RpQ" secondAttribute="bottom" id="hgc-fb-4ZY"/>
+                            <constraint firstItem="rt5-ad-Qcq" firstAttribute="trailing" secondItem="0W3-4C-RpQ" secondAttribute="trailing" id="rw5-Db-MQ4"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="0W3-4C-RpQ"/>
                     </view>
+                    <navigationItem key="navigationItem" id="teV-ha-Vyb"/>
                     <connections>
                         <outlet property="containerView" destination="Vrl-tm-vl4" id="SX6-nt-YXS"/>
                         <outlet property="heightConstraints" destination="wEX-Bo-hY4" id="bw7-9a-hjT"/>
@@ -734,12 +737,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VVY-bj-Ted" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="765.60000000000002" y="850.52473763118451"/>
+            <point key="canvasLocation" x="766" y="855"/>
         </scene>
         <!--Sign Up Vc-->
         <scene sceneID="9XV-uY-P9A">
             <objects>
-                <viewController id="igc-O7-8UW" customClass="SignUpVc" customModule="Hovos" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SignUpVc" useStoryboardIdentifierAsRestorationIdentifier="YES" id="igc-O7-8UW" customClass="SignUpVc" customModule="Hovos" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="x62-FO-oXr">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
